<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="300dp"
    android:background="@color/colorAccent"

    android:layout_gravity="center">


    <TextView
        android:id="@+id/closebtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/white"
        android:text="@string/x"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center"
        android:background="@drawable/square"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainmenu"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="30sp"/>


    <LinearLayout
        android:baselineAligned="false"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:background="@color/colorNewgame"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/newGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newGame"
                android:textSize="18sp"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:onClick="ShowParticlePopup"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/colorbuttonsdark"

            android:layout_width="0dp"
            android:layout_height="50dp">

            <TextView

                android:id="@+id/h20counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/showparticles"
                android:textSize="18sp"
                android:textColor="@color/white"/>
        </LinearLayout>





    </LinearLayout>





    <LinearLayout

        android:baselineAligned="false"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">



        <LinearLayout
            android:onClick="ShowShopPopup"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/colorShop"
            android:layout_width="0dp"
            android:layout_height="50dp">

            <TextView
                android:onClick="ShowShopPopup"
                android:id="@+id/shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Shop"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>



    <LinearLayout
        android:baselineAligned="false"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:background="@color/colorSave"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/mattercounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="18sp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>