<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="390dp"
    android:background="@color/colorbuttons"
    android:padding="20dp"
    android:layout_gravity="center">



    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="30sp"/>


    <LinearLayout
        android:baselineAligned="false"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">





        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"

            android:background="@color/colorbuttons"
            android:layout_height="200dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutinitimsg"
                android:textSize="18sp"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gotit"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorbuttonsdark"
            android:text="@string/confrmbtnmsg"/>
    </LinearLayout>
</LinearLayout>












