<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="560dp"
    android:background="@color/colorAccent"
    android:padding="5dp"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/closebtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/white"
        android:text="@string/x"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center"
        android:background="@drawable/square"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/evoshop"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="30sp"/>


    <LinearLayout
        android:baselineAligned="false"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
<LinearLayout
    android:onClick=""
    android:orientation="vertical"
    android:layout_weight="1"
    android:gravity="center"
    android:background="@color/colorbuttons"

    android:layout_width="0dp"
    android:layout_height="100dp">

        <TextView
            android:id="@+id/Protbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/protein"
            android:textSize="18sp"
            android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="10 matter"
        android:textSize="12sp"
        android:textColor="@color/white"/>
</LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/colorbuttonsdark"
            android:layout_width="0dp"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/DNAbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dna"
                android:textSize="18sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="10 protein"
                android:textSize="12sp"
                android:textColor="@color/white"/>
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:background="@color/colorbuttons"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/Probtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prokaryote"
                android:textSize="18sp"

                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="10 DNA"
                android:textSize="12sp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>






    <LinearLayout
        android:baselineAligned="false"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/colorbuttonsdark"
            android:layout_width="0dp"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/Bacbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bacteria"
                android:textSize="18sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="10 prokaryotes"
                android:textSize="12sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/colorbuttons"
            android:layout_width="0dp"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/Eukbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eukaryote"
                android:textSize="18sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="10 Bacteria"
                android:textSize="12sp"
                android:textColor="@color/white"/>
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:background="@color/colorbuttonsdark"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/Colbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colony"
                android:textSize="18sp"

                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="10 Eukaryotes"
                android:textSize="12sp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>





    <LinearLayout
        android:baselineAligned="false"

        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/colorbuttons"
            android:layout_width="0dp"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/Funbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fungus"
                android:textSize="18sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="10 Colonies"
                android:textSize="12sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/colorbuttonsdark"
            android:layout_width="0dp"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/Plabtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant"
                android:textSize="18sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="10 fungi"
                android:textSize="12sp"
                android:textColor="@color/white"/>
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:background="@color/colorbuttons"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/Anibtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animal"
                android:textSize="18sp"

                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="10 Plants"
                android:textSize="12sp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>










<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

</LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/Prottxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protein"
                android:textSize="15sp"

                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/DNAtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dna"
                android:textSize="15sp"

                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/Protxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prokaryote"
                android:textSize="15sp"

                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>




    <LinearLayout
        android:baselineAligned="false"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/Bactxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bacteria"
                android:textSize="15sp"

                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/Euktxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eukaryote"
                android:textSize="15sp"

                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/Coltxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colony"
                android:textSize="15sp"

                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/Funtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fungus"
                android:textSize="15sp"

                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/Platxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant"
                android:textSize="15sp"

                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/Anitxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animal"
                android:textSize="15sp"

                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>